package game;


message SendMailPacket {
	// 发送者，如果客户端发送可以不填
	optional uint64 sender = 1;
	// 发送者名字，如果客户端发送可以不填
	optional string sender_name = 2;
	// 发送邮件者类型，
	optional int32 sender_type = 3;
	// 客户端发送目标玩家ID,接收者
	repeated uint64 receivers = 4;
	// 接收者类型，
	optional int32 receiver_type = 5;
	// 标题
	required string title = 6;
	// 简要
	optional string brief = 7;
	// 邮件内容
	optional string content = 8;
	// 邮件类型 0:战斗 1:侦查 2:被侦查 3:被攻击
	optional int32 mail_type = 9;
}

